# imgui-console

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
example/: CMakeLists.txt
example/scripts/: console.script
example/src/: example_main.cpp
include/: imgui_console.h
include/csys/: CSYS_LICENSE.txt  api.h  argument_parser.h  arguments.h  autocomplete.h  autocomplete.inl  command.h  csys.h  exceptions.h  history.h  history.inl  item.h  item.inl  script.h  script.inl  string.h  system.h  system.inl
include/imgui_console/: imgui_console.h
src/: imgui_console.cpp
